# ml-supercapacitor-pipeline

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
data/: processed.csv  raw.csv
raw_interpretability_results/CatBoostRegressor/pi/: pi_groupedCV.json  pi_groupedCV_removed.json  pi_randomCV.json  pi_randomCV_removed.json  pi_trainTest.json  pi_trainTest_removed.json
raw_interpretability_results/CatBoostRegressor/shap/: shap_groupedCV.json  shap_groupedCV_removed.json  shap_randomCV.json  shap_randomCV_removed.json  shap_trainTest.json  shap_trainTest_removed.json
raw_interpretability_results/Ridge/pi/: pi_groupedCV.json  pi_groupedCV_removed.json  pi_randomCV.json  pi_randomCV_removed.json  pi_trainTest.json  pi_trainTest_removed.json
raw_interpretability_results/Ridge/shap/: shap_groupedCV.json  (+5 more)
raw_results/: summary_baseline.csv  summary_tuned.csv  tuned_votingRegressor.csv  votingRegressor_baseline.csv
results/: summary_baseline.csv  summary_tuned.csv  voting_regressor_baseline.csv
scripts/: create_summary.py  data_preparation.py  run_baseline.py  run_features.py  run_interpretability.py  run_plotting.py  run_tuned_votingRegressor.py  run_tuning.py  run_tuning_votingRegressor.py  run_votingRegressor.py  search_space.py
src/leakproof_ml/: __init__.py
src/modeling/: interpretability.py  model_functions.py  pipeline_transform.py  tunning.py
src/utils/: interpretability_utils.py  io_utils.py  model_utils.py  tunning_utils.py
src/visualizations/: interpretability_plotting.py  metric_plotting.py  standard_plotting.py
(+254 files in other folders)
